packages/app/src/app/srs/card/card.component.scss
:host {
  display: block;
  height: 100%;
  position: relative;
}

.inner {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.card {
  flex: 1;
  perspective: 1000px;
  user-select: none;
  transform: translateZ(0);
  overflow: hidden;
}

.side {
  padding: 1.5rem;
}

.card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.6s;
  transform-style: preserve-3d;
}

.card.flip .card-inner {
  transform: rotateY(180deg);
}

.card.flip .back {
  pointer-events: auto;
}

.side {
  position: absolute;
  width: 100%;
  top: 0;
  bottom: 0;
  backface-visibility: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: auto;
}

.side .side-content {
  margin-top: auto;
  margin-bottom: auto;
  flex-shrink: 0;
}

.back {
  transform: rotateY(180deg);
  pointer-events: none;
}

.control-elements {
  flex-shrink: 0;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;

  .rate {
    --border-radius: 0.5rem;

    display: flex;
    gap: 0.5rem;
    border-radius: var(--border-radius);
    background-color: var(--body-bg);
    max-width: 100%;

    button {
      display: flex;
      gap: 0.3rem;
      align-items: center;
      justify-content: center;
      width: 12rem;
      padding: 0.5rem;
      cursor: pointer;
      border-radius: 0;

      &:first-child {
        border-radius: var(--border-radius) 0 0 var(--border-radius);
      }

      &:last-child {
        border-radius: 0 var(--border-radius) var(--border-radius) 0;
      }
    }

    mat-icon {
      width: 1.5rem;
      height: 1.5rem;
      font-size: 1.5rem;
      line-height: 1.5rem;
    }
  }
}

.operation {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  pointer-events: none;
  align-items: center;
  justify-content: center;

  .operation-icon {
    display: none;
    font-size: 4.2rem;
  }

  .strong-icon,
  .somewhat-icon,
  .weak-icon {
    color: var(--primary-color);
  }

  &.strong {
    .strong-icon {
      display: inline-block;
    }
  }

  &.somewhat {
    .somewhat-icon {
      display: inline-block;
    }
  }

  &.weak {
    .weak-icon {
      display: inline-block;
    }
  }
}

